Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/IntiPM_Time__c.object-meta.xml
<CustomObject>
    <description>A time entry record which allows users to log times against milestone activities.</description>
    <label>Time</label>
    <nameField>
        <displayFormat>TIME-{0000}</displayFormat>
        <label>Time ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>