Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <defaultValue>&quot;Not submitted&quot;</defaultValue>
    <label>Approval Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>