Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>CASE( Week_Day__c , &apos;Monday&apos;, Week_Ending_Date__c -6, &apos;Tuesday&apos;, Week_Ending_Date__c -5,&apos;Wednesday&apos;, Week_Ending_Date__c -4,&apos;Thursday&apos;, Week_Ending_Date__c -3,&apos;Friday&apos;, Week_Ending_Date__c -2,&apos;Saturday&apos;, Week_Ending_Date__c -1,Week_Ending_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>