Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Date_old__c.field-meta.xml
<CustomField>
    <fullName>Date_old__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Date old</label>
    <type>Date</type>
</CustomField>