Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Enddate__c.field-meta.xml
<CustomField>
    <fullName>Enddate__c</fullName>
    <label>Enddate</label>
    <type>Date</type>
</CustomField>