Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_week__c</fullName>
    <label>Hours per week</label>
    <summarizedField>Time_Per_Day__c.Hours__c</summarizedField>
    <summaryForeignKey>Time_Per_Day__c.Activity_Or_Case_Time__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>