Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Labor_costs__c.field-meta.xml
<CustomField>
    <fullName>Labor_costs__c</fullName>
    <formula>CASE( Type_of_consultant__c, &apos;Junior Business Consultant&apos;, (Hours__c * 999), &apos;Medior Business Consultant&apos;, (Hours__c * 999), &apos;Senior Business Consultant&apos;, (Hours__c * 999), &apos;Salesforce Consultant&apos;, (Hours__c * 999),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>