Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <formula>Name</formula>
    <label>Milestone</label>
    <type>Text</type>
</CustomField>