Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <label>% Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>