Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>Name</formula>
    <label>Project</label>
    <type>Text</type>
</CustomField>