Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <formula>Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProjectId</label>
    <type>Text</type>
</CustomField>