Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/ResourceId__c.field-meta.xml
<CustomField>
    <fullName>ResourceId__c</fullName>
    <formula>TimesheetId__c</formula>
    <label>ResourceId</label>
    <type>Text</type>
</CustomField>