Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/ru_Hours_Actual__c.field-meta.xml
<CustomField>
    <fullName>ru_Hours_Actual__c</fullName>
    <inlineHelpText>The number of hours charged. Note: This cannot be more than 1 day (24 hours).</inlineHelpText>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>