Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Startdate__c.field-meta.xml
<CustomField>
    <fullName>Startdate__c</fullName>
    <label>Startdate</label>
    <type>Date</type>
</CustomField>