Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet__c</fullName>
    <label>Timesheet</label>
    <referenceTo>Timesheet__c</referenceTo>
    <relationshipName>Timecards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>