Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/TimesheetId__c.field-meta.xml
<CustomField>
    <fullName>TimesheetId__c</fullName>
    <formula>Timesheet__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimesheetId</label>
    <type>Text</type>
</CustomField>