Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Type_of_consultant__c.field-meta.xml
<CustomField>
    <fullName>Type_of_consultant__c</fullName>
    <label>Type of consultant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Junior Business Consultant</fullName>
                <default>true</default>
                <label>Junior Business Consultant</label>
            </value>
            <value>
                <fullName>Medior Business Consultant</fullName>
            </value>
            <value>
                <fullName>Senior Business Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>