Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Week_Day__c.field-meta.xml
<CustomField>
    <fullName>Week_Day__c</fullName>
    <label>Week Day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
                <default>true</default>
                <label>Monday</label>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>