Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/fields/Week_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Ending_Date__c</fullName>
    <label>Week Ending Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>