Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Milestone__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Timesheet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>