Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/listViews/My_Times.listView-meta.xml
<ListView>
    <fullName>My_Times</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Milestone__c</columns>
    <columns>ru_Hours_Actual__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Times</label>
</ListView>