Reetan.Nayak Dev 25/force-app/main/default/objects/IntiPM_Time__c/listViews/My_Unsubmitted_Times.listView-meta.xml
<ListView>
    <fullName>My_Unsubmitted_Times</fullName>
    <columns>TimesheetId__c</columns>
    <columns>Timesheet__c</columns>
    <columns>NAME</columns>
    <columns>Milestone__c</columns>
    <columns>Project__c</columns>
    <columns>ru_Hours_Actual__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Not submitted</value>
    </filters>
    <label>My Unsubmitted Times</label>
</ListView>